# zsurf

./: .qmake.stash  CMakeLists.txt  PKGBUILD  README.md  config.ini  zsurf  zsurf.1  zsurf.cpp  zsurf.desktop  zsurf.h  zsurf.pro
dictionaries/: en_US.bdic
scripts/: default.js  script.js  zsurf-vim.js
